[package]
name = "doomstack_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0.29" }